# world_cup_2026

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy-pages.yml
data/: README.md
data/frontend/: tournament.json
data/manual/: bracket.json  source_catalog.json  team_aliases.csv  teams.csv
data/processed/: calibrated_model.json  historical_results_excluded.csv  model_validation_report.json
data/raw/footballratings/: footballratings_snapshot.html
data/raw/international_results/: source_metadata.json
data/raw/wikipedia/: 2026_fifa_world_cup_knockout_stage.html
data/snapshots/: ratings.csv
docs/: agents.md  architecture_decisions.md  data_model.md  requirements.md  visual_design.md
frontend/: index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
frontend/public/data/: tournament.json
frontend/src/: main.tsx
frontend/src/app/: App.tsx
frontend/src/domain/: types.ts
frontend/src/styles/: global.css  (+4 more)
scripts/: __init__.py  build_historical_elo.py  calibrate_historical_model.py  fetch_current_elo.py  fetch_historical_results.py  generate_frontend_data.py  historical_model.py  prepare_bracket.py  prepare_historical_results.py  validate_data.py  validate_model.py
tests/frontend/: bracket.test.ts  championProbability.test.ts  mobilePods.test.ts  modelToggle.test.ts  overrides.test.ts  probability.test.ts  scaffold.test.ts  teamDisplay.test.ts
tests/python/: test_current_elo_import.py  test_data_validation.py  test_historical_model_pipeline.py  test_prepare_bracket.py  test_scaffold.py
(+20 files in other folders)
